differnt num of dataset handle

--- a/Semester Research Program/TrueOrLie Detection.ipynb
+++ b/Semester Research Program/TrueOrLie Detection.ipynb
@@ -26,52 +26,65 @@
       "Requirement already satisfied: mediapipe in c:\\anaconda\\lib\\site-packages (0.8.9.1)\n",
       "Requirement already satisfied: sklearn in c:\\anaconda\\lib\\site-packages (0.0)\n",
       "Requirement already satisfied: matplotlib in c:\\anaconda\\lib\\site-packages (3.4.3)\n",
-      "Requirement already satisfied: numpy~=1.19.2 in c:\\anaconda\\lib\\site-packages (from tensorflow) (1.19.5)\n",
-      "Requirement already satisfied: astunparse~=1.6.3 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (1.6.3)\n",
-      "Requirement already satisfied: tensorflow-estimator<2.6.0,>=2.5.0rc0 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (2.5.0)\n",
-      "Requirement already satisfied: keras-nightly~=2.5.0.dev in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (2.5.0.dev2021032900)\n",
-      "Requirement already satisfied: keras-preprocessing~=1.1.2 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (1.1.2)\n",
-      "Requirement already satisfied: gast==0.4.0 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (0.4.0)\n",
-      "Requirement already satisfied: wheel~=0.35 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (0.36.2)\n",
-      "Requirement already satisfied: protobuf>=3.9.2 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (3.17.2)\n",
-      "Requirement already satisfied: absl-py~=0.10 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (0.12.0)\n",
       "Requirement already satisfied: wrapt~=1.12.1 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (1.12.1)\n",
-      "Requirement already satisfied: termcolor~=1.1.0 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (1.1.0)\n",
-      "Requirement already satisfied: h5py~=3.1.0 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (3.1.0)\n",
-      "Requirement already satisfied: tensorboard~=2.5 in c:\\anaconda\\lib\\site-packages (from tensorflow) (2.8.0)\n",
-      "Requirement already satisfied: six~=1.15.0 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (1.15.0)\n",
-      "Requirement already satisfied: flatbuffers~=1.12.0 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (1.12)\n",
-      "Requirement already satisfied: google-pasta~=0.2 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (0.2.0)\n",
-      "Requirement already satisfied: typing-extensions~=3.7.4 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (3.7.4.3)\n",
+      "Requirement already satisfied: wheel~=0.35 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (0.36.2)\n",
+      "Requirement already satisfied: tensorflow-estimator<2.6.0,>=2.5.0rc0 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (2.5.0)\n",
+      "Requirement already satisfied: keras-preprocessing~=1.1.2 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (1.1.2)\n",
+      "Requirement already satisfied: numpy~=1.19.2 in c:\\anaconda\\lib\\site-packages (from tensorflow) (1.19.5)\n",
+      "Requirement already satisfied: protobuf>=3.9.2 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (3.17.2)\n",
+      "Requirement already satisfied: astunparse~=1.6.3 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (1.6.3)\n",
+      "Requirement already satisfied: absl-py~=0.10 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (0.12.0)\n",
       "Requirement already satisfied: grpcio~=1.34.0 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (1.34.1)\n",
       "Requirement already satisfied: opt-einsum~=3.3.0 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (3.3.0)\n",
-      "Requirement already satisfied: opencv-contrib-python in c:\\anaconda\\lib\\site-packages (from mediapipe) (4.5.5.62)\n",
+      "Requirement already satisfied: google-pasta~=0.2 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (0.2.0)\n",
+      "Requirement already satisfied: six~=1.15.0 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (1.15.0)\n",
+      "Requirement already satisfied: h5py~=3.1.0 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (3.1.0)\n",
+      "Requirement already satisfied: keras-nightly~=2.5.0.dev in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (2.5.0.dev2021032900)\n",
+      "Requirement already satisfied: tensorboard~=2.5 in c:\\anaconda\\lib\\site-packages (from tensorflow) (2.8.0)\n",
+      "Requirement already satisfied: typing-extensions~=3.7.4 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (3.7.4.3)\n",
+      "Requirement already satisfied: gast==0.4.0 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (0.4.0)\n",
+      "Requirement already satisfied: flatbuffers~=1.12.0 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (1.12)\n",
+      "Requirement already satisfied: termcolor~=1.1.0 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorflow) (1.1.0)\n",
       "Requirement already satisfied: attrs>=19.1.0 in c:\\anaconda\\lib\\site-packages (from mediapipe) (21.2.0)\n",
+      "Requirement already satisfied: opencv-contrib-python in c:\\anaconda\\lib\\site-packages (from mediapipe) (4.5.5.62)\n",
       "Requirement already satisfied: scikit-learn in c:\\anaconda\\lib\\site-packages (from sklearn) (0.24.2)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\anaconda\\lib\\site-packages (from matplotlib) (0.10.0)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\anaconda\\lib\\site-packages (from matplotlib) (3.0.4)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in c:\\anaconda\\lib\\site-packages (from matplotlib) (8.4.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\anaconda\\lib\\site-packages (from matplotlib) (1.3.1)\n",
       "Requirement already satisfied: python-dateutil>=2.7 in c:\\anaconda\\lib\\site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\anaconda\\lib\\site-packages (from matplotlib) (8.4.0)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\anaconda\\lib\\site-packages (from matplotlib) (3.0.4)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\anaconda\\lib\\site-packages (from matplotlib) (0.10.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\anaconda\\lib\\site-packages (from matplotlib) (1.3.1)\n",
+      "Requirement already satisfied: tensorboard-data-server<0.7.0,>=0.6.0 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorboard~=2.5->tensorflow) (0.6.1)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: There was an error checking the latest version of pip.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: setuptools>=41.0.0 in c:\\anaconda\\lib\\site-packages (from tensorboard~=2.5->tensorflow) (58.0.4)\n",
+      "Requirement already satisfied: google-auth-oauthlib<0.5,>=0.4.1 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorboard~=2.5->tensorflow) (0.4.4)\n",
+      "Requirement already satisfied: markdown>=2.6.8 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorboard~=2.5->tensorflow) (3.3.4)\n",
+      "Requirement already satisfied: werkzeug>=0.11.15 in c:\\anaconda\\lib\\site-packages (from tensorboard~=2.5->tensorflow) (2.0.2)\n",
+      "Requirement already satisfied: requests<3,>=2.21.0 in c:\\anaconda\\lib\\site-packages (from tensorboard~=2.5->tensorflow) (2.26.0)\n",
       "Requirement already satisfied: tensorboard-plugin-wit>=1.6.0 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorboard~=2.5->tensorflow) (1.8.0)\n",
       "Requirement already satisfied: google-auth<3,>=1.6.3 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorboard~=2.5->tensorflow) (1.30.1)\n",
-      "Requirement already satisfied: markdown>=2.6.8 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorboard~=2.5->tensorflow) (3.3.4)\n",
-      "Requirement already satisfied: google-auth-oauthlib<0.5,>=0.4.1 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorboard~=2.5->tensorflow) (0.4.4)\n",
-      "Requirement already satisfied: setuptools>=41.0.0 in c:\\anaconda\\lib\\site-packages (from tensorboard~=2.5->tensorflow) (58.0.4)\n",
-      "Requirement already satisfied: requests<3,>=2.21.0 in c:\\anaconda\\lib\\site-packages (from tensorboard~=2.5->tensorflow) (2.26.0)\n",
-      "Requirement already satisfied: werkzeug>=0.11.15 in c:\\anaconda\\lib\\site-packages (from tensorboard~=2.5->tensorflow) (2.0.2)\n",
-      "Requirement already satisfied: tensorboard-data-server<0.7.0,>=0.6.0 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from tensorboard~=2.5->tensorflow) (0.6.1)\n",
       "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\anaconda\\lib\\site-packages (from scikit-learn->sklearn) (2.2.0)\n",
       "Requirement already satisfied: joblib>=0.11 in c:\\anaconda\\lib\\site-packages (from scikit-learn->sklearn) (1.1.0)\n",
       "Requirement already satisfied: scipy>=0.19.1 in c:\\anaconda\\lib\\site-packages (from scikit-learn->sklearn) (1.7.1)\n",
       "Requirement already satisfied: cachetools<5.0,>=2.0.0 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from google-auth<3,>=1.6.3->tensorboard~=2.5->tensorflow) (4.2.2)\n",
-      "Requirement already satisfied: pyasn1-modules>=0.2.1 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from google-auth<3,>=1.6.3->tensorboard~=2.5->tensorflow) (0.2.8)\n",
       "Requirement already satisfied: rsa<5,>=3.1.4 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from google-auth<3,>=1.6.3->tensorboard~=2.5->tensorflow) (4.7.2)\n",
+      "Requirement already satisfied: pyasn1-modules>=0.2.1 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from google-auth<3,>=1.6.3->tensorboard~=2.5->tensorflow) (0.2.8)\n",
       "Requirement already satisfied: requests-oauthlib>=0.7.0 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from google-auth-oauthlib<0.5,>=0.4.1->tensorboard~=2.5->tensorflow) (1.3.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from requests<3,>=2.21.0->tensorboard~=2.5->tensorflow) (2021.5.30)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\anaconda\\lib\\site-packages (from requests<3,>=2.21.0->tensorboard~=2.5->tensorflow) (1.26.7)\n",
       "Requirement already satisfied: idna<4,>=2.5 in c:\\anaconda\\lib\\site-packages (from requests<3,>=2.21.0->tensorboard~=2.5->tensorflow) (3.2)\n",
       "Requirement already satisfied: charset-normalizer~=2.0.0 in c:\\anaconda\\lib\\site-packages (from requests<3,>=2.21.0->tensorboard~=2.5->tensorflow) (2.0.4)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\anaconda\\lib\\site-packages (from requests<3,>=2.21.0->tensorboard~=2.5->tensorflow) (1.26.7)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from requests<3,>=2.21.0->tensorboard~=2.5->tensorflow) (2021.5.30)\n",
       "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from pyasn1-modules>=0.2.1->google-auth<3,>=1.6.3->tensorboard~=2.5->tensorflow) (0.4.8)\n",
       "Requirement already satisfied: oauthlib>=3.0.0 in c:\\users\\sms studio\\appdata\\roaming\\python\\python39\\site-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<0.5,>=0.4.1->tensorboard~=2.5->tensorflow) (3.1.1)\n"
      ]
@@ -83,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "9c2c91e4",
    "metadata": {},
    "outputs": [],
@@ -126,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "2884357d",
    "metadata": {},
    "outputs": [],
@@ -150,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "12e5b451",
    "metadata": {},
    "outputs": [],
@@ -177,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "b842cca0",
    "metadata": {},
    "outputs": [],
@@ -237,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "19337fec",
    "metadata": {},
    "outputs": [],
@@ -318,8 +331,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_PATH = os.path.join('ML_Data')         # Path for exported data, numpy arrays\n",
-    "\n",
+    "DATA_PATH = os.path.join('ML_Data')         # Path for exported data, numpy arrays \n",
+    "# C:\\Users\\Sms Studio\\Desktop\\University_Research_Projects\\LieDetection\\Semester Research Program\\ML_Data\n",
     "actions = np.array(['true', 'lie'])       # Actions that we try to detect\n",
     "                      \n",
     "true_vdos = 159                        # for taking total true videos.\n",
